# Library-Feedback-Sentiment-Analysis

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DATASETS_REFERENCE.md  DATA_REQUIREMENTS_QUICK_REFERENCE.md  HUGGINGFACE_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_SUMMARY.md  METADATA_AUTOFILL_FEATURE.md  METADATA_AUTOFILL_USER_GUIDE.md  NICHE_USE_CASES.md  NLP_TECHNIQUES_AND_MODELS.md  PROJECT_CONTEXT.md  README.md  USER_GUIDE.md  pyproject.toml  requirements.txt  streamlit_app.py  test_system.py
config/: .env.example  settings.py
docs/: ACCEPTED_DATA_TYPES.md  AMIA_PROJECT_REPORT_COMPLETE.md  ARCHITECTURE.md  BASELINE_FUNCTIONALITY.md  CHANGELOG.md  COURSE_PROJECT_SUMMARY.md  DATA_CLEANING_CAPABILITIES.md  DATA_FORMAT_GUIDE.md  DEPENDENCY_STRATEGY.md  FINAL_IMPLEMENTATION_REPORT.md  LIBRARY_ASSESSMENT_SYSTEM_EVALUATION_REPORT.md  LOCAL_FIRST_SMALL_TEAM_DESIGN_RECORD.md  MODULE_INTERFACES.md  NLP_QUICK_REFERENCE.md  PERSONAL_SYSTEM_REPORT.md  PROJECT_CONTEXT.md  PROJECT_REPORT_GOOGLE_DOCS_INSTRUCTIONS.md  QUANTITATIVE_ANALYSIS_PROPOSAL.md  README.md  REFACTOR_AUDIT_SUMMARY.md  REFACTOR_COMPLETE_SUMMARY.md  STREAMLIT_UI_DESIGN_RECORD.md  TESTING.md  TESTING_SUMMARY.md  USER_GUIDE.md
docs/specs/ferpa-compliant-rag-dss/: design.md  requirements.md  tasks.md
docs/specs/library-assessment-decision-support/: design.md  requirements.md  tasks.md
modules/: auth.py  csv_handler.py  database.py  idempotency.py  logging_service.py  qualitative_analysis.py  quantitative_analysis.py  rag_evaluation.py  rag_query.py  report_generator.py  sentiment_enhanced.py  workflow_insights.py
scripts/: audit_repository.py  init_app.py
tests/integration/: test_analysis_report_flow.py  test_end_to_end_flow.py  test_query_interface.py
tests/manual/: test_visualization_page.py
tests/property/: __init__.py  test_csv_round_trip_properties.py  test_rag_metrics_properties.py
tests/unit/: test_csv_error_handling.py  test_idempotency.py  test_indexing_status.py  test_pii_integration.py  test_query_error_handling.py  test_workflow_insights.py
ui/: __init__.py  admin_ui.py  analyze_ui.py  auth_ui.py  context_ui.py  data_ui.py  data_upload_ui.py  governance_ui.py  home_ui.py  logs_ui.py  qualitative_ui.py  quantitative_ui.py  query_ui.py  report_ui.py  reports_workflow_ui.py  smart_guidance.py  visualization_ui.py
