[project]
name = "library-assessment-decision-support"
version = "1.0.0"
description = "A local-first Streamlit application for small-team library assessment workflows"
authors = [{name = "Library Assessment Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.31.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "textblob>=0.17.1",
    "scikit-learn>=1.6.1",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "ollama>=0.1.6",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "reportlab>=4.0.9",
    "markdown>=3.5.2",
    "bcrypt>=4.1.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.3",
    "black>=24.1.1",
    "ruff>=0.2.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers -p no:cacheprovider"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
